--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Vibration">
-        <activity android:name=".patternTestActivity"></activity>
+        <activity android:name=".CompassTestActivity"></activity>
+        <activity android:name=".needleTestActivity" />
+        <activity android:name=".patternTestActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
